# event-sourcing

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
event-bus-kafka/: Cargo.toml
event-bus-kafka/src/event/: listener.rs
event-sourcing/: Cargo.toml
event-sourcing-postgres/: Cargo.toml
event-sourcing-postgres/src/event/: store.rs
event-sourcing-postgres/src/event/store/: postgres.rs
event-sourcing-pulsar/: Cargo.toml
event-sourcing-pulsar/src/event/: stream.rs
event-sourcing/src/: aggregate.rs  command.rs  command_handler.rs  cqrs.rs  event.rs  lib.rs  projection.rs  query_handler.rs  snapshot.rs
event-sourcing/src/cqrs/: command_handler.rs  query_handler.rs
event-sourcing/src/event/: envelope.rs  listener.rs  mod.rs  store.rs  stream.rs
event-sourcing/src/snapshot/: envelope.rs  store.rs
event-store-inmemory/: Cargo.toml
event-store-inmemory/src/: lib.rs
event-store-postgres/: .env  Cargo.toml
event-store-postgres/docker/: docker-compose.yml
event-store-postgres/migrations/2022-09-04-124134_event_table/: down.sql  up.sql
event-store-postgres/migrations/2022-09-12-124309_snapshot/: down.sql  up.sql
event-store-postgres/src/: entity.rs  lib.rs  schema.rs
event-store-scylladb/: Cargo.toml
event-store-scylladb/src/: lib.rs  query.rs
event-store-scylladb/src/event/: store.rs
event-store-scylladb/src/snapshot/: store.rs
event-stream-kafka/: Cargo.toml
event-stream-kafka/src/: lib.rs
examples/bankaccount/: Cargo.toml  README.md  api.http  connector.http
examples/bankaccount/docker/: docker-compose.yml
examples/bankaccount/docker/connect/config/: worker.properties
examples/bankaccount/docker/connect/plugins/: download-scylla-cdc-source-connector-jar.sh
examples/bankaccount/docker/console/: console-config.yaml
examples/bankaccount/src/: main.rs
examples/bankaccount/src/api/v1/: controller.rs
examples/bankaccount/src/application/: account.rs
examples/bankaccount/src/application/account/: deposit_command_handler.rs  open_account_command_handler.rs  withdraw_command_handler.rs
examples/bankaccount/src/domain/: account.rs
examples/bankaccount/src/domain/account/: aggregate.rs  event.rs
examples/postgres-kafka/bank-account/: Cargo.toml  README.md  bank_account.http
examples/postgres-kafka/bank-account/deployment/: docker-compose.yml  register-postgres.json
examples/postgres-kafka/bank-account/src/: event.rs  main.rs
examples/postgres-kafka/bank-account/src/api/: controller.rs
examples/postgres-kafka/bank-account/src/application/: deposit_handler.rs  mod.rs  open_bank_account_handler.rs  withdraw_handler.rs
examples/postgres-kafka/bank-account/src/domain/: bank_account_aggregate.rs  bank_account_balance_projection.rs  mod.rs
