[package]
name = "event-sourcing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
derive-new = "0.5"
derive_more = "0.99"
custom_error = "1.9"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

[features]