[package]
name = "event-store-inmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-sourcing = { path="../event-sourcing" }
async-trait = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }