[package]
name = "event-store-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-sourcing = { path="../event-sourcing" }
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.0"
async-trait = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive-new = "0.5"

[features]
#postgres=["dep:diesel"]