[package]
name = "bank-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-sourcing = { git = "https://github.com/benjaminjacobberg/event-sourcing-rs" }
event-store-postgres = { git = "https://github.com/benjaminjacobberg/event-sourcing-rs" }
event-stream-kafka = { git = "https://github.com/benjaminjacobberg/event-sourcing-rs" }

rocket = { version = "0.5.0-rc.2", features = ["serde_json", "uuid", "json"] }
kafka = "0.9"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15.0"
retry = "2.0"
strum = "0.24"
strum_macros = "0.24"
